# sidepanel

./: .gitignore  .jscpd.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  index.html  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.band/: config.yaml
.claude/skills/: integration-tests.md
.claude/skills/integration-tests/: SKILL.md
.github/workflows/: build.yml  ci.yml  nightly.yml  release.yml
.husky/: pre-push
apps/cli/: Cargo.toml  SKILL.md  package.json
apps/cli/skills/: band-cli.md
apps/cli/src/: api.rs  main.rs  onboarding.rs  render.rs  shell.rs  skills.rs  state.rs  validate.rs
apps/cli/tests/: integration.rs  seed-db.mjs  seed-settings.mjs
apps/dashboard/: index.html  package.json
apps/dashboard/src/: App.tsx  main.tsx
apps/dashboard/src-tauri/: Cargo.toml  app-presets.json  tauri.conf.json  tauri.prod.conf.json
apps/dashboard/src-tauri/capabilities/: default.json
apps/dashboard/src-tauri/icons/: icon.icns
apps/dashboard/src-tauri/scripts/: download-bun.sh  notify.ps1  notify.sh  sign-mac-deps.sh
apps/dashboard/src-tauri/src/: api.rs  git.rs  lib.rs  main.rs  state.rs
apps/dashboard/src-tauri/src/commands/: ax_windows.rs  branch_status.rs  browser.rs  hooks.rs  ide.rs  ide_stub.rs  mod.rs  project.rs  settings.rs  status.rs  webserver.rs  window.rs  window_manager.rs  workspace.rs
apps/dashboard/src-tauri/src/commands/apps/: mod.rs
apps/dashboard/tests/: use-tunnel.test.tsx
apps/sidepanel/: README.md  package.json
apps/sidepanel/src/: App.tsx  main.tsx  styles.css
apps/sidepanel/src-tauri/: Cargo.toml
apps/web/: auth.mjs  auth.test.mjs  auth.ts  package.json  playwright.config.ts  start-server.mjs  start-server.ts  test-server.ts  vite.config.ts  vitest.config.ts
apps/web/e2e/: queue-ui.spec.ts  session-history.spec.ts  tasks-page.spec.ts  todo-widget.spec.ts
apps/web/scripts/: build-server.mjs  build-server.sh
docs/: cli.md  macos-signing-spec.md  web-architecture.md
extensions/vscode/: package-lock.json  package.json  tsconfig.json
scripts/: bump-version.mjs  dev-dashboard.mjs
src/: App.tsx  SettingsWindow.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  app-presets.json  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: ghostty-setup.py  xcode-launch.py
src-tauri/src/: git.rs  lib.rs  main.rs  state.rs  window_pinning.rs  worktrees.rs
src/api/: tauri.ts
src/components/: AddProjectButton.tsx  ProjectList.tsx  Settings.tsx  WorktreeList.tsx
(+217 files in other folders)
