[package]
name = "band-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for programmatic workspace management with Band"

[[bin]]
name = "band"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
