[package]
name = "band-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "band_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "band-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
libc = "0.2"
tokio = { version = "1", features = ["process", "time", "net"] }
url = "2"
wry = "0.54.3"
ureq = { version = "3", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow pedantic lints that are too noisy or conflict with Tauri patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"        # Tauri commands require owned types
unnecessary_wraps = "allow"             # Tauri commands must return Result
cast_possible_truncation = "allow"      # Common in FFI/system code
cast_sign_loss = "allow"                # Common in FFI/system code
cast_possible_wrap = "allow"            # Common in FFI/system code
cast_lossless = "allow"                 # Common in FFI/system code
too_many_lines = "allow"                # Not actionable for some handlers

[lints.rust]
deprecated = "allow"                    # cocoa crate deprecations (Tauri dependency)
unexpected_cfgs = "allow"               # objc 0.2 msg_send! uses old cfg(feature = "cargo-clippy")
